# langchain-demo

./: .gitignore  FileChatMessageHistory.py  JsonOut.py  README.md  SQLiteChatMessageHistory.py  StrOut.py  agentdemo.py  docunment.py  embe.py  historyChat.py  log  modeldemo2.py  pyproject.toml  vecSearchPrompt.py
.claude/: settings.json
agent/: eco_seg_agent.py
dcm/csv/: stu.csv
dcm/data/: info.csv
dcm/json/: stu.json  stu_lines.json  stu_list.json
history_chat/: memory.db  user_001
prompt/: react_human_template.md  system_prompt.md
promptTemp/: ChatPromptTemp.py  FewShotPromptTemp.py  invokeformat.py  promptTemp.py
skills/code-formatter/: SKILL.md
tools/: skill.py
tools/get_weather/: __init__.py  get_weather.py
ut/: get_AIMessage.py  md2str.py  output.py  pic2base64.py  step2str.py
